// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Pill with border 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "borderBottomColor": "#21C95E",
      "borderBottomLeftRadius": 999999,
      "borderBottomRightRadius": 999999,
      "borderBottomWidth": 1,
      "borderLeftColor": "#21C95E",
      "borderLeftWidth": 1,
      "borderRightColor": "#21C95E",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "#21C95E",
      "borderTopLeftRadius": 999999,
      "borderTopRightRadius": 999999,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#FFFFFF",
        "fontFamily": "Basel Grotesk",
        "fontSize": 17,
        "fontWeight": "400",
        "lineHeight": 22.1,
      }
    }
    suppressHighlighting={true}
  >
    Icon
  </Text>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": undefined,
        "fontFamily": "Basel Grotesk",
        "fontSize": 17,
        "fontWeight": "400",
        "lineHeight": 22.1,
        "paddingTop": 1,
      }
    }
    suppressHighlighting={true}
  >
    My Second Pill Label
  </Text>
</View>
`;

exports[`renders a Pill without image 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#1F1F1F",
      "borderBottomColor": "transparent",
      "borderBottomLeftRadius": 999999,
      "borderBottomRightRadius": 999999,
      "borderBottomWidth": 1,
      "borderLeftColor": "transparent",
      "borderLeftWidth": 1,
      "borderRightColor": "transparent",
      "borderRightWidth": 1,
      "borderStyle": "solid",
      "borderTopColor": "transparent",
      "borderTopLeftRadius": 999999,
      "borderTopRightRadius": 999999,
      "borderTopWidth": 1,
      "flexDirection": "row",
      "gap": 8,
      "justifyContent": "center",
      "paddingBottom": 8,
      "paddingLeft": 4,
      "paddingRight": 4,
      "paddingTop": 8,
    }
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#000",
        "fontFamily": "Basel Grotesk",
        "fontSize": 17,
        "fontWeight": "400",
        "lineHeight": 22.1,
        "paddingTop": 1,
      }
    }
    suppressHighlighting={true}
  >
    My Pill Label
  </Text>
</View>
`;
